--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -2365,6 +2365,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -More code cleanup
 
+-Misc minor bug fixes
+
 -Added new primary currencies: INR (Indian Rupee)
 
 -Additional config settings for currencies / system stats chart rendering
